Bug #23909
snaps missing in mapper, should be: 188,18f,191,195,197,198,199,19d,19e,1a1,1a3 was r -2...repaired
0%
Description
New code for tracker #22881 in pull request https://github.com/ceph/ceph/pull/21546 no calls _scan_snaps() on each replica. During a trashing run this error is found:
"2018-04-26 17:25:17.998655 osd.7 osd.7 172.21.15.112:6800/35599 203 : cluster [ERR] osd.7 found snap mapper error on pg 3.1 oid 3:9f32f27c:::smithi17217362-19 oo...oo:1a3 snaps missing in mapper, should be: 188,18f,191,195,197,198,199,19d,19e,1a1,1a3 was r -2...repaired" in cluster log
Related issues
History
#1 Updated by David Zafman over 2 years ago
- Related to Bug #22881: scrub interaction with HEAD boundaries and snapmapper repair is broken added
#2 Updated by David Zafman over 2 years ago
- Description updated (diff)
#3 Updated by David Zafman over 2 years ago
- Priority changed from Normal to Urgent
#4 Updated by David Zafman over 2 years ago
- Status changed from In Progress to Resolved
Included in https://github.com/ceph/ceph/pull/21546
#5 Updated by Kefu Chai over 2 years ago
$ git br --contains 83861a5b75ddb98366f1ec106487b88703f25cf7 | grep wip-kefu-testing-2018-05-05-1912 * wip-kefu-testing-2018-05-05-1912
#6 Updated by David Zafman over 2 years ago
- Status changed from Resolved to Need More Info
Does your branch include c20a95b0b9f4082dcebb339135683b91fe39ec0a? The change I made was needed to make that fix work properly.
#7 Updated by David Zafman over 2 years ago
Nevermind. I see you branch was still on ci repo.
$ git branch --contains c20a95b0b9f4082dcebb339135683b91fe39ec0a | grep wip-kefu-testing-2018-05-05-1912
wip-kefu-testing-2018-05-05-1912
#8 Updated by David Zafman over 2 years ago
- Related to Bug #24045: Eviction still raced with scrub due to preemption added
#9 Updated by David Zafman over 2 years ago
- Status changed from Need More Info to Resolved
#10 Updated by Sage Weil over 1 year ago
- Related to Bug #40454: snap_mapper error, scrub gets r -2..repaired added