osd: If ending on a head object get all of meta map

When ending on a head object, the head and snapshots would stay in
cleaned_meta_map until more maps arrive.  The problem as that
during a scrub an eviction could occur because scrubber.start
is already past the stray object(s) so range_intersects_scrub() is false.

Fixes: http://tracker.ceph.com/issues/23909

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 83861a5b75ddb98366f1ec106487b88703f25cf7)